yyamamoto+sesetup@salesforce.com/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>依頼受付</fullName>
        <description>正式契約前</description>
        <isActive>true</isActive>
        <values>
            <fullName>コンタクト</fullName>
        </values>
        <values>
            <fullName>依頼取り消し</fullName>
        </values>
        <values>
            <fullName>契約成立</fullName>
        </values>
        <values>
            <fullName>契約面談</fullName>
        </values>
        <values>
            <fullName>正式依頼</fullName>
        </values>
        <values>
            <fullName>着手金入金待ち</fullName>
        </values>
        <values>
            <fullName>見積</fullName>
        </values>
        <values>
            <fullName>面談</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>活動中</fullName>
        <description>正式契約後</description>
        <isActive>true</isActive>
        <values>
            <fullName>依頼取り消し</fullName>
        </values>
        <values>
            <fullName>契約成立</fullName>
        </values>
        <values>
            <fullName>活動中</fullName>
        </values>
        <values>
            <fullName>活動完了</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Field14__c</fullName>
        <formula>TODAY() - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>経過日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field15__c</fullName>
        <formula>today()- LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>未活動日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field17__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予算は確保しているか？</inlineHelpText>
        <label>予算確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field3_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>推奨案件フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__QuoteAmount__c</fullName>
        <label>見積・受注の合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__QuoteStageName__c</fullName>
        <formula>CASE(OPROARTS050__QuoteStage__c, 0, &apos;新規&apos;,
10, &apos;見積&apos;, 20, &apos;受注&apos;,
30, &apos;発注 (一部)&apos;, 40, &apos;発注 (全部)&apos;,
50, &apos;納品 (一部)&apos;, 60, &apos;納品 (全部)&apos;,
70, &apos;請求 (一部)&apos;, 80, &apos;請求 (全部)&apos;,
90, &apos;入金 (一部)&apos;, 100, &apos;入金 (全部)&apos;,
&apos;未定義&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積・受注の段階</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__QuoteStage__c</fullName>
        <label>見積・受注の段階値</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Unassigned_projects</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>未アサイン案件</label>
    </listViews>
    <listViews>
        <fullName>X00</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Field63__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2015</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2015</value>
        </filters>
        <label>00：当月進行中案件一覧</label>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <filterScope>Everything</filterScope>
        <label>01 すべての商談</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>03. 今週登録分</label>
    </listViews>
    <listViews>
        <fullName>x05</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Field63__c</columns>
        <columns>Field59__c</columns>
        <columns>Field71__c</columns>
        <columns>Field72__c</columns>
        <columns>Field70__c</columns>
        <columns>Field58__c</columns>
        <columns>Field57__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field71__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>04. タイムチャージ時間超過</label>
    </listViews>
    <listViews>
        <fullName>x07</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>07. 今月完了分</label>
    </listViews>
    <listViews>
        <fullName>x08</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>08. 来月完了分</label>
    </listViews>
    <recordTypes>
        <fullName>ActivityOpps</fullName>
        <active>true</active>
        <businessProcess>活動中</businessProcess>
        <label>活動案件</label>
    </recordTypes>
    <recordTypes>
        <fullName>RequestOpps</fullName>
        <active>true</active>
        <businessProcess>依頼受付</businessProcess>
        <label>依頼案件</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>